# AI-in-weather-and-Tokenomics

./: README.md  analysis.sh  attribution_pipeline.sh  dashboard.sh  pyproject.toml
analysis/: data_loading.py  main.py  paths.py  visualization.py
analysis_assets/: attribution_variables.json  param_to_png.json  params_registry.json
attribution_pipeline/: assets.py  attribution_methods.py  attribution_smoother.py  config_loader.py  main.py  model_wrapper.py  run.py  utils.py  visualize.py
attribution_pipeline/earth2studio/data/: __init__.py
attribution_pipeline/earth2studio/models/px/: __init__.py  aifs.py  aurora.py  dlesym.py  dlwp.py  fcn.py  fcn3.py  fengwu.py  fuxi.py  graphcast_operational.py  graphcast_small.py  interpmodafno.py  pangu.py  persistence.py  sfno.py  stormcast.py
dashboard/: app.py  utils.py
experiment_assets/: config.yaml
notebooks/: baselines.ipynb
